--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@
 /node_modules/.bin
 /node_modules
 /target
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+
